--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/gcanti/tcomb-form",
   "dependencies": {
     "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
     "react": "^0.14.0",
     "tcomb-form-templates-bootstrap": "^0.1.0",
     "tcomb-validation": "^2.2.0"
@@ -38,6 +39,8 @@
     "babel-core": "^6.0.0",
     "babel-eslint": "^4.1.5",
     "babel-loader": "^6.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.18.0",
     "eslint": "^1.10.1",
     "eslint-config-airbnb": "^1.0.0",
     "eslint-plugin-react": "^3.10.0",
