--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "react": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "babel": "5.8.38",
-    "babel-core": "5.8.38",
+    "babel": "^6.0.0",
+    "babel-core": "^6.0.0",
     "babel-eslint": "4.1.8",
-    "babel-loader": "5.3.2",
+    "babel-loader": "^6.0.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
     "eslint": "1.10.3",
     "eslint-config-airbnb": "1.0.0",
     "eslint-plugin-react": "3.10.0",
